--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
         release {
             minifyEnabled true
             shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), './proguards/proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), './proguards/proguard-rules.pro', './proguards/proguard-glide.pro', './proguards/proguard-square-retrofit2.pro'
         }
     }
 }
@@ -35,6 +35,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -44,6 +45,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    implementation project(':pagination')
 
     // retrofit
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -55,7 +58,9 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.29.1-alpha'
     kapt 'com.google.dagger:hilt-android-compiler:2.29.1-alpha'
 
-    implementation project(':pagination')
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
 
 kapt {
