--- a/pagination/build.gradle
+++ b/pagination/build.gradle
@@ -22,6 +22,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildFeatures {
+        viewBinding = true
+    }
+//    // Available in Android Gradle Plugin 3.6.0
+//    viewBinding {
+//        enabled = true
+//    }
 }
 
 dependencies {
