--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,9 @@ dependencies {
     // glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    // logging
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
 
 kapt {
